# WordSmith

./: .gitignore  CMakeLists.txt  README.md  SDLTest.vcxproj  SDLTest.vcxproj.filters  main.cpp  sim
.github/workflows/: main.yml
Release/: SDLTest.exe.recipe
Release/SDLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDLTest.lastbuildstate  SDLTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WordsmithRelease/: Wordsmith.filters  Wordsmith.iobj  Wordsmith.ipdb
WordsmithRelease/header/: flyweight.hpp  game.hpp  parse_campaign.hpp  parse_intermediate.hpp  window.hpp
WordsmithRelease/res/: prompt.txt  random.txt  stats.txt
WordsmithVSproject/: Wordsmith.sln
header/: char_iterator.hpp  character.hpp  flyweight.hpp  game.hpp  graphic.hpp  line.hpp  parse.hpp  parse_advanced.hpp  parse_campaign.hpp  parse_random.hpp  parse_ranked.hpp  promptselector.hpp  rectangle.hpp  statistics.hpp  window.hpp
res/: novice.txt  prompt.txt  stats.txt  user_cache.txt
src/: char_iterator.cpp  character.cpp  flyweight.cpp  game.cpp  line.cpp  parse_advanced.cpp  parse_campaign.cpp  parse_intermediate.cpp  parse_novice.cpp  parse_random.cpp  parse_ranked.cpp  promptselector.cpp  rectangle.cpp  sim.cpp  statistics.cpp  unit_test.cpp  window.cpp
tests/: char_iterator_test.hpp  character_test.hpp  flyweight_test.hpp  line_test.hpp  parse_advanced_test.hpp  parse_campaign_test.hpp  parse_intermediate_test.hpp  parse_novice_test.hpp  parse_random_test.hpp  parse_ranked_test.hpp  prompt_selector_test.hpp  promptselector_test.hpp  rectangle_test.hpp  statistics_test.hpp  unit_test.cpp  window_test.hpp
(+31 files in other folders)
